Fixes and updates as of 2023-04-19
1. Added Rounds tabs
2. Fixed incorrect THRU values for individual rounds
3. [WIP] cut off line - disabled for now
4.

--- a/src/app/leaderboard-module/individual-leaderboard/individual-leaderboard.component.scss
+++ b/src/app/leaderboard-module/individual-leaderboard/individual-leaderboard.component.scss
@@ -21,6 +21,12 @@ individual-leaderboard {
       display:none;
     }
 
+    .cut-off-line {
+      border-top-color: black !important;
+      border-top-width: medium !important;
+      // background-color: lightgrey !important;
+    }
+
     .position {
       // font-family: 'Toyota' !important;
       // font-size: 1.3em;
@@ -38,6 +44,14 @@ individual-leaderboard {
     .non-playing-rows {
       background-color: grey;
     }
+  }
+  
+  .left-tabs {
+
+  }
+  .right-tabs {
+    display: flex;
+    justify-content: flex-end;
   }
 
   // .toyota table {
